Updated the sass to fix code and titles on mobile

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -54,6 +54,9 @@ a:hover {
 
 pre, code {
 	font-size: 14px;
+	@media screen and (max-width: 600px){
+		font-size: 12px;
+	}
 }
 
 .alignleft{
