--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -48,7 +48,6 @@ article{
 		font-family: $font-mono;
 	}
 	code{
-		font-size: 14px;
 		padding: 1px 3px;
 		margin: 0 3px;
 		@include border-radius(5px);
